# create_knowledge_graph_neo4j

./: README.md  pyproject.toml
data/: sample.txt
src/create_knowlege_graph_app/: build_graph.py  streamlit_app.py
src/create_knowlege_graph_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
